Adjust mobile modal spacing and add workaround for safari opacity transition bug

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -11,11 +11,12 @@
             position: absolute;
             left: 50%;
             top: 36px;
-            transform: translateX(-50%);
+            transform: translateX(-50%) translate3d(0,0,0);
             background-color: white;
             height: auto;
             max-width: 500px;
             width: 100%;
+            -webkit-backface-visibility: hidden;
 
             padding: 30px;
             font-size: 18px;
@@ -27,6 +28,7 @@
 
             ul {
                 margin-bottom: 48px;
+                padding-left: 30px;
                 li {
                     margin-bottom: 20px;
                     line-height: 1.5;
@@ -54,14 +56,19 @@
                 max-width: none;
                 width: auto;
                 top: 8px;
-                transform: translateX(0); 
+                transform: translateX(0) translate3d(0,0,0);
                 left: 8px;
                 right: 8px;
+                padding: 24px;
                 .heading {
                     font-size: 24px;
+                    text-align: center;
                 }
-                ul li {
-                    font-size: 14px;
+                ul {
+                    padding-left: 24px;
+                    li {
+                        font-size: 14px;
+                    }
                 }
                 .button {
                     width: 90px;
